# chat-yew

./: .gitignore  Cargo.toml  LICENSE  README.md
frontend/: Cargo.toml  Makefile  Trunk.toml  index.html  input.css
frontend/src/: lib.rs  main.rs
frontend/src/api/: auth.rs  config.rs  mod.rs  private.rs
frontend/src/components/: account_section.rs  auth_guard.rs  common.rs  friend_list.rs  friend_page.rs  login_modal.rs  member_list.rs  message_list.rs  mod.rs  new_friend.rs  new_room.rs  role_banner.rs  room_list.rs  room_page.rs  search_box.rs  toast.rs
frontend/src/hooks/: mod.rs  use_auto_login.rs  use_click_away.rs  use_local_storage.rs  use_login.rs  use_logout.rs  use_register.rs  use_request.rs  use_websocket.rs
frontend/src/pages/: chat.rs  login.rs  mod.rs  page_not_found.rs  register.rs  route.rs
frontend/src/states/: auth.rs  chat.rs  friend.rs  mod.rs  room.rs  toast.rs  trigger.rs  types.rs  websocket.rs
shared/: Cargo.toml
shared/src/: auth.rs  common.rs  event.rs  friend.rs  lib.rs  member.rs  message.rs  room.rs  user.rs  validator.rs
