[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "HtmlDocument",
    "HtmlImageElement",
    "KeyboardEvent",
    "FileReader",
] }
futures = "0.3.26"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
gloo-net = "0.2.6"
gloo-console = "0.2.3"
gloo-storage = "0.2.2"
gloo-events = "0.1.2"
gloo-timers = "0.2.6"
